added all the env vars for marathon.  now aligned with the enterprise startup and packaging